[gd_scene load_steps=4 format=2]

[ext_resource path="res://NavigationOptionsManager.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 932, 241, 0, 0, 0, 0, 1148, 538, 0, 0, 0, 0, 968, 831 )
}

[node name="NavigationOptionsManager" type="Control" groups=["GamestateObserver"]]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
visible = false
margin_left = 928.0
margin_top = 508.0
margin_right = 992.0
margin_bottom = 572.0
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 2 )
stretch_mode = 4

[node name="DisplayCurve" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="DisplayFinder" type="PathFollow2D" parent="DisplayCurve"]
position = Vector2( 932, 241 )
rotation = 0.94201

[node name="EventLocation" type="Control" parent="."]
margin_left = 957.0
margin_top = 847.0
margin_right = 957.0
margin_bottom = 847.0

[node name="Options" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
